--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -8,7 +8,10 @@
               <input type="password" placeholder="Password" ng-model="loginForm.password">
           </label>
       </div>
-      <button class="button button-block button-calm" ng-click="handleLoginBtnClick(loginForm)">Login</button>
+      <ion-radio ng-model="choice" ng-value="'tenant'">Tenant</ion-radio>
+      <ion-radio ng-model="choice" ng-value="'landlord'">Landlord</ion-radio>
+
+      <button class="button button-block button-calm" ng-click="handleLoginBtnClick(loginForm, choice)">Login</button>
       <button class="button button-block button-calm" ui-sref="register">Register</button>
   </ion-content>
 </ion-view>
