added register choice + landlord and tenant register

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,6 +12,6 @@
       <ion-radio ng-model="choice" ng-value="'landlord'">Landlord</ion-radio>
 
       <button class="button button-block button-calm" ng-click="handleLoginBtnClick(loginForm, choice)">Login</button>
-      <button class="button button-block button-calm" ui-sref="register">Register</button>
+      <button class="button button-block button-calm" ui-sref="register-choice">Register</button>
   </ion-content>
 </ion-view>
