fixed register choice to link to landlord reg and tenant reg

--- a/www/templates/tenant-register.html
+++ b/www/templates/tenant-register.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Register" name="register-view">
+<ion-view view-title="Register" name="tenant-register-view">
   <ion-content class="padding">
       <div class="list list-inset" ng-init="registrationForm = {}">
           <label class="item item-input">
