--- a/www/templates/landlord-register.html
+++ b/www/templates/landlord-register.html
@@ -1,5 +1,4 @@
-<ion-view view-title="Register1" name="landlord-register-view">
-  <h1>h</h1>
+<ion-view view-title="Landlord Register" name="landlord-register-view">
   <ion-content class="padding">
       <div class="list list-inset" ng-init="registrationForm = {}">
           <label class="item item-input">
