property register form-not tested
couldnt fix problem with local storage, so profiles still dont load,
need to add a button to landlord profile to test property creation form

--- a/www/templates/landlord-profile.html
+++ b/www/templates/landlord-profile.html
@@ -1,8 +1,7 @@
 <ion-view view-title="Landlord Profile" name="landlord-profile">
   <ion-content class="padding">
 
-      ////number
-      //name
-      //email
+      <!-- <h1>Name {user.name}</h1>
+      <h2>E-mail: {user.email}</h2> -->
   </ion-content>
 </ion-view>
