--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -5,5 +5,7 @@
       //name
       //email -->
       <h1>Name {{user.name}}</h1>
+      <h2>E-mail {{user.email}}</h2>
+
   </ion-content>
 </ion-view>
