Got tenant profile mostly working. need to get landlord profile working, plus login.js needs to fix problem where can't determine what type of user

--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -1,11 +1,16 @@
-<ion-view view-title="Landlord Profile" name="landlord-profile">
+<ion-view view-title="Tenant Profile" name="tenant-profile">
   <ion-content class="padding">
 
-      <!-- ////number
-      //name
-      //email -->
-      <h1>Name {{user.name}}</h1>
-      <h2>E-mail {{user.email}}</h2>
+    <h1>Name</h1>
+    <h2>{{user.f_name}} {{user.l_name}}</h2>
+
+    <h1>Number</h1>
+    <h2>need to add in</h2>
+
+    <h1>Email</h1>
+    <h2>{{user.email}}</h2>
+
+    <h3>Test output {{user}}</h3>
 
   </ion-content>
 </ion-view>
