--- a/www/templates/landlord-profile.html
+++ b/www/templates/landlord-profile.html
@@ -11,6 +11,7 @@
     <h2>{{user.email}}</h2>
 
     <h3>Test output {{user}}</h3>
-
-  </ion-content>
+    <button class="button button-block button-calm" ui-sref="property-register">Add a Property</button>
+    <button class="button button-block button-calm" ui-sref="view-properties">View Properties</button>
+   </ion-content>
 </ion-view>
