--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -11,7 +11,6 @@
     <h2>{{user.email}}</h2>
 
     <h3>Test output {{user}}</h3>
-    // insert button here
-
-  </ion-content>
+<!--      <button class="button button-block button-calm" ui-sref="view-properties">View Properties</button>
+ -->  </ion-content>
 </ion-view>
