--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -12,5 +12,6 @@
 
     <h3>Test output {{user}}</h3>
 <!--      <button class="button button-block button-calm" ui-sref="view-properties">View Properties</button>
- -->  </ion-content>
+ -->  
+	</ion-content>
 </ion-view>
