search settings page changes and property register radio buttons added

--- a/www/templates/property-register.html
+++ b/www/templates/property-register.html
@@ -11,10 +11,14 @@
               <input type="number" placeholder="Number of Baths" ng-model="registrationForm.n_baths">
           </label>
           <label class="item item-input">
-              <input type="text" placeholder="Rent Allowance" ng-model="registrationForm.rent_allowance">
+             <!-- <input type="radio" placeholder="Rent Allowance" ng-model="registrationForm.rent_allowance">--><!--how make yes/no thing or button -->
+              <ion-radio ng-model="registrationForm.rent_allowance" ng-value="'true'">Rent Allowance</ion-radio>
+              <ion-radio ng-model="registrationForm.rent_allowance" ng-value="'false'">No Rent Allowance Accepted</ion-radio>
           </label>
           <label class="item item-input">
-              <input type="text" placeholder="PTRB" ng-model="registrationForm.ptrb">
+              <!--<input type="text" placeholder="PTRB" ng-model="registrationForm.ptrb">-->
+              <ion-radio ng-model="registrationForm.ptrb" ng-value="'true'">Rent Allowance</ion-radio>
+              <ion-radio ng-model="registrationForm.ptrb" ng-value="'false'">No Rent Allowance Accepted</ion-radio>
           </label>
       </div>
       <button class="button button-block button-calm" ng-click="handleRegBtnClick(registrationForm)">Register</button>
