--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -11,7 +11,7 @@
     <h2>{{user.email}}</h2>
 
     <h3>Test output {{user}}</h3>
-    <button class="button button-block button-calm" ui-sref="view-properties">View Properties</button>
+   <!-- <button class="button button-block button-calm" ui-sref="view-properties">View Properties</button> -->
   	<button class="button button-block button-calm" ui-sref="search-settings">Change Search Settings</button>
 	</ion-content>
 </ion-view>
