--- a/www/templates/search-settings.html
+++ b/www/templates/search-settings.html
@@ -21,8 +21,8 @@
           </label>
           <label class="item item-input">
               <!--<input type="text" placeholder="PTRB" ng-model="registrationForm.ptrb">-->
-              <ion-radio ng-model="registrationForm.ptrb" ng-value="'true'">Rent Allowance</ion-radio>
-              <ion-radio ng-model="registrationForm.ptrb" ng-value="'false'">No Rent Allowance Accepted</ion-radio>
+              <ion-radio ng-model="registrationForm.ptrb" ng-value="'true'">PTRB</ion-radio>
+              <ion-radio ng-model="registrationForm.ptrb" ng-value="'false'">Not PTRB</ion-radio>
           </label>
       <button class="button button-block button-calm" ng-click="handleRegBtnClick(registrationForm)">Search</button>
       </div>
