number of beds to property register

--- a/www/templates/property-register.html
+++ b/www/templates/property-register.html
@@ -11,6 +11,9 @@
               <input type="number" placeholder="Number of Baths" ng-model="registrationForm.n_baths">
           </label>
           <label class="item item-input">
+              <input type="number" placeholder="Number of Beds" ng-model="registrationForm.n_beds">
+          </label>
+          <label class="item item-input">
              <!-- <input type="radio" placeholder="Rent Allowance" ng-model="registrationForm.rent_allowance">--><!--how make yes/no thing or button -->
               <ion-radio ng-model="registrationForm.rent_allowance" ng-value="'true'">Rent Allowance</ion-radio>
               <ion-radio ng-model="registrationForm.rent_allowance" ng-value="'false'">No Rent Allowance Accepted</ion-radio>
