added tab navigation (in progress, not fully working), edited tenant-profile, added tenantMatchesCtrl (in progress)

--- a/www/templates/tenant-landlord-profile.html
+++ b/www/templates/tenant-landlord-profile.html
@@ -1,5 +1,6 @@
-<ion-view view-title="Landlord Profile" name="landlord-profile">
+<ion-view view-title="Tenant Landlord Profile" name="tenant-landlord-profile">
   <ion-content class="padding">
+
     <h1>Name</h1>
     <h2>{{user.f_name}} {{user.l_name}}</h2>
 
@@ -10,6 +11,7 @@
     <h2>{{user.email}}</h2>
 
     <h3>Test output {{user}}</h3>
+
         <div class="profile-card text-center">
         <img class="img" src="/img/cover.jpg">
                 <div class="profile-info">
@@ -22,8 +24,5 @@
                 </div>
         </div>
 
-    <button class="button button-block button-calm" ui-sref="property-register">Add a Property</button>
-    <button class="button button-block button-calm" ui-sref="view-properties">View Properties</button>
-    <button class="button button-block button-calm" ui-sref="landlord-editProfile">Edit Profile</button>
    </ion-content>
 </ion-view>
