--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Login" name="login-view">
+<ion-view view-title="Login" name="login-view" hide-tabs>
   <ion-content class="padding">
       <div class="list list-inset" ng-init="loginForm = {}">
           <label class="item item-input">
@@ -13,5 +13,7 @@
 
       <button class="button button-block button-calm" ng-click="handleLoginBtnClick(loginForm, choice)">Login</button>
       <button class="button button-block button-calm" ui-sref="register-choice">Register</button>
+      <!-- <button class="button button-block button-calm" ui-sref="tenant.profile">Tenant</button> -->
+      <button class="button button-block button-calm" ui-sref="tenant.profile">Tenant</button>
   </ion-content>
 </ion-view>
