--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -1,17 +1,17 @@
 <ion-view view-title="Tenant Profile" name="tenant-profile">
   <ion-content class="padding">
-
-    <h1>Name</h1>
-    <h2>{{user.f_name}} {{user.l_name}}</h2>
-
-    <h1>Number</h1>
-    <h2>need to add in</h2>
-
-    <h1>Email</h1>
-    <h2>{{user.email}}</h2>
-
-    <h3>Test output {{user}}</h3>
-   <!-- <button class="button button-block button-calm" ui-sref="view-properties">View Properties</button> -->
-  	<button class="button button-block button-calm" ui-sref="search-settings">Change Search Settings</button>
+    <div class="profile-card text-center">
+    <img class="img" src="/img/cover.jpg">
+            <div class="profile-info">
+              <img class="profile-pic" src="/img/profile.jpg">
+              <h2 class="hvr-underline-from-center">{{user.f_name}} {{user.l_name}}<span>{{user.email}}</span></h2>
+              <div>Test output {{user}}</div>
+              <a href="http://www.twitter.com"><i class="ion-social-twitter"></i></a>
+              <a href="mailto:burnsm3@tcd.ie"><i class="ion-ios-email"></i></a>
+              <a href="http://www.facebook.com"><i class="ion-social-facebook"></i></a>
+            </div>
+    </div>
+   <button class="button button-block button-calm" ui-sref="tenant-matches({num: 1})">View Matches</button>
+  	<!-- <button class="button button-block button-calm" ui-sref="search-settings">Change Search Settings</button> -->
 	</ion-content>
 </ion-view>
