--- a/www/templates/property-register.html
+++ b/www/templates/property-register.html
@@ -23,13 +23,13 @@
               <input type="number" placeholder="Number of Available Beds" ng-model="form.avail_beds">
           </label>
           <label class="item item-input">
-              <ion-radio ng-model="form.rent_allowance" ng-value="'t'">Rent Allowance</ion-radio>
-              <ion-radio ng-model="form.rent_allowance" ng-value="'f'">No Rent Allowance Accepted</ion-radio>
+              <ion-checkbox ng-model="form.rent_allowance" ng-value="'t'">Rent Allowance</ion-checkbox>
+              <!--<ion-radio ng-model="form.rent_allowance" ng-value="'f'">No Rent Allowance Accepted</ion-radio>-->
           </label>
           <label class="item item-input">
               <!--<input type="text" placeholder="PTRB" ng-model="form.ptrb">-->
-              <ion-radio ng-model="form.ptrb" ng-value="'t'">PTRB</ion-radio>
-              <ion-radio ng-model="form.ptrb" ng-value="'f'">Not PTRB</ion-radio>
+              <ion-checkbox ng-model="form.ptrb" ng-value="'t'">PTRB</ion-checkbox>
+              <!--<ion-radio ng-model="form.ptrb" ng-value="'f'">Not PTRB</ion-radio>-->
           </label>
       </div>
       <button class="button button-block button-calm" ng-click="handleRegBtnClick(form)">Register</button>
