--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -12,6 +12,6 @@
             </div>
     </div>
    <button class="button button-block button-calm" ui-sref="tenant-matches({num: 1})">View Matches</button>
-  	<!-- <button class="button button-block button-calm" ui-sref="search-settings">Change Search Settings</button> -->
+   <button class="button button-block button-calm" ui-sref="search-settings">Change Search Settings</button>
 	</ion-content>
 </ion-view>
