add in success screen after register
links back to login

--- a/www/templates/success.html
+++ b/www/templates/success.html
@@ -1,1 +1,4 @@
+</br>
 <h1>You did it! Yay!</h1>
+<p>Now, try sign in!</p>
+<button class="button button-block button-calm" ui-sref="login">Login</button>
