fixed bug where local images weren't displaying on iOS

--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Tenant Profile" name="tenant-profile">
   <ion-content class="padding">
     <div class="profile-card text-center">
-    <img class="img" src="/img/cover.jpg">
+    <img class="img" src="img/cover.jpg">
             <div class="profile-info">
-              <img class="profile-pic" src="/img/profile.jpg">
+              <img class="profile-pic" src="img/profile.jpg">
               <h2 class="hvr-underline-from-center">{{user.f_name}} {{user.l_name}}<span>{{user.email}}</span></h2>
               <div>Test output {{user}}</div>
               <a href="http://www.twitter.com"><i class="ion-social-twitter"></i></a>
