add missing padding/wrappers to success.html

--- a/www/templates/success.html
+++ b/www/templates/success.html
@@ -1,4 +1,12 @@
-</br>
-<h1>You did it! Yay!</h1>
-<p>Now, try sign in!</p>
-<button class="button button-block button-calm" ui-sref="login">Login</button>
+<ion-view view-title="Tenant Profile" name="tenant-profile">
+  <ion-content class="padding">
+
+    <h1>You did it! Yay!</h1>
+    </br>
+
+    <p>Now, try sign in!</p>
+    </br>
+
+    <button class="button button-block button-calm" ui-sref="login">Login</button>
+  </ion-content>
+</ion-view>
