add "change search settings" button to property profile

--- a/www/templates/property-profile.html
+++ b/www/templates/property-profile.html
@@ -14,5 +14,6 @@
 
     <button class="button button-block button-balanced" ng-click="sendReaction(true)">Approve</button>
     <button class="button button-block button-assertive" ng-click="sendReaction(false)">Reject</button>
+    <button class="button button-block button-calm" ui-sref="search-settings">Change Search Settings</button>
   </ion-content>
 </ion-view>
