--- a/www/templates/tenant-matches.html
+++ b/www/templates/tenant-matches.html
@@ -1,5 +1,10 @@
 <ion-view view-title="Tenant Matches" name="tenant-matches">
   <ion-content class="padding">
-    <h1>TEST</h1>
+    <ion-list>
+      <ion-item ng-repeat="id in matches.data" ui-sref="tenant-landlord-profile({num: {{id.landlord_id}}})">
+        {{id.landlord_id}} {{id.street}} {{id.town}} {{id.county}}
+        <!-- landlord_id needs to be change to landlord name -->
+      </ion-item>
+    </ion-list>
 	</ion-content>
 </ion-view>
