profile and search tab fully working, match tab still in progress

--- a/www/templates/no-property-results.html
+++ b/www/templates/no-property-results.html
@@ -3,7 +3,7 @@
 
     <p> There are no properties matching your search.</p>
 
-    <button class="button button-block button-calm" ui-sref="search-settings">Go back to Search</button>
+    <button class="button button-block button-calm" ui-sref="tenant.search">Go back to Search</button>
 
   </ion-content>
 </ion-view>
