--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -13,5 +13,6 @@
     </div>
    <button class="button button-block button-calm" ui-sref="tenant-matches({num: {{user.id}}})">View Matches</button>
    <button class="button button-block button-calm" ui-sref="search-settings">Change Search Settings</button>
+   <button class="button button-block button-calm" ui-sref="login">Log-out</button>
 	</ion-content>
 </ion-view>
