--- a/www/templates/tenant.html
+++ b/www/templates/tenant.html
@@ -10,7 +10,7 @@
 		<ion-nav-view name="search-tab"></ion-nav-view>
 		</ion-tab>
 
-		<ion-tab title="Matches" icon="ion-person-stalker" ui-sref="tenant.matches({num: {{user.id}}})" badge="1" badge-style="badge-assertive">
+		<ion-tab title="Matches" icon="ion-person-stalker" ui-sref="tenant.matches" badge="1" badge-style="badge-assertive">
 		<ion-nav-view name="matches-tab"></ion-nav-view>
 		</ion-tab>
 
