add phone numbers to profiles

--- a/www/templates/tenant-landlord-profile.html
+++ b/www/templates/tenant-landlord-profile.html
@@ -6,7 +6,7 @@
                   <img class="profile-pic" src="/img/profile.jpg">
                   <h2 class="hvr-underline-from-center">{{landlord.data.f_name}} {{landlord.data.l_name}}<span>{{landlord.data.email}}</span></h2>
                   <!-- above needs tweaking -->
-                  <div>Test output {{landlord.data}}</div>
+                  <div>{{landlord.data.ph_no}}</div>
                   <a href="http://www.twitter.com"><i class="ion-social-twitter"></i></a>
                   <a href="mailto:burnsm3@tcd.ie"><i class="ion-ios-email"></i></a>
                   <a href="http://www.facebook.com"><i class="ion-social-facebook"></i></a>
