--- a/www/templates/tenant-profile.html
+++ b/www/templates/tenant-profile.html
@@ -5,7 +5,7 @@
             <div class="profile-info">
               <img class="profile-pic" src="img/profile.jpg">
               <h2 class="hvr-underline-from-center">{{user.f_name}} {{user.l_name}}<span>{{user.email}}</span></h2>
-              <div>Test output {{user}}</div>
+              <div>{{user.ph_no}}</div>
               <a href="http://www.twitter.com"><i class="ion-social-twitter"></i></a>
               <a href="mailto:burnsm3@tcd.ie"><i class="ion-ios-email"></i></a>
               <a href="http://www.facebook.com"><i class="ion-social-facebook"></i></a>
