--- a/www/templates/landlord-profile.html
+++ b/www/templates/landlord-profile.html
@@ -1,21 +1,11 @@
 <ion-view view-title="Landlord Profile" name="landlord-profile">
   <ion-content class="padding">
-    <h1>Name</h1>
-    <h2>{{user.f_name}} {{user.l_name}}</h2>
-
-    <h1>Number</h1>
-    <h2>need to add in</h2>
-
-    <h1>Email</h1>
-    <h2>{{user.email}}</h2>
-
-    <h3>Test output {{user}}</h3>
         <div class="profile-card text-center">
         <img class="img" src="img/cover.jpg">
                 <div class="profile-info">
                   <img class="profile-pic" src="img/profile.jpg">
                   <h2 class="hvr-underline-from-center">{{user.f_name}} {{user.l_name}}<span>{{user.email}}</span></h2>
-                  <div>Test output {{user}}</div>
+                  <div>{{user.ph_no}}</div>
                   <a href="http://www.twitter.com"><i class="ion-social-twitter"></i></a>
                   <a href="mailto:burnsm3@tcd.ie"><i class="ion-ios-email"></i></a>
                   <a href="http://www.facebook.com"><i class="ion-social-facebook"></i></a>
