--- a/www/templates/tenant-register.html
+++ b/www/templates/tenant-register.html
@@ -11,6 +11,9 @@
               <input type="email" placeholder="Email" ng-model="registrationForm.email">
           </label>
           <label class="item item-input">
+              <input type="text" placeholder="Phone Number" ng-model="registrationForm.ph_no">
+          </label>
+          <label class="item item-input">
               <input type="password" placeholder="Password" ng-model="registrationForm.password">
           </label>
           <label class="item item-input">
